--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,5 +12,5 @@
 
     "types": ["@figma/plugin-typings"]
   },
-  "include": ["src/**/*.ts", "src/**/*.tsx"]
+  "include": ["src/**/*", "scripts/**/*"]
 }
